<resources>
    <string name="app_name">Chat Hub</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="enter">Enter</string>
    <string name="background_image">Background Image</string>
</resources>
